test/sema/nontransitive-mutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo: Copyable {
    int a
}

void bar(Foo* foo) {
    // CHECK: [[@LINE+1]]:11: error: cannot assign to immutable variable 'a' of type 'int'
    foo.a = 42
}
